# invomodo

./: Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  sw.js  tailwind.config.js
src/: lib.rs  main.rs
src/app/: layout.rs
src/auth/: bindings.rs  firebase_auth.js  mod.rs  session.rs
src/components/: mod.rs  pdf_viewer.rs
src/components/editable_grid/: hooks.rs  mod.rs  types.rs  validation.rs  view.rs
src/components/invoice/: builder.rs  custom_fields.rs  custom_fields_renderer.rs  discounts.rs  line_items.rs  line_items_charges.rs  mod.rs  other_charges.rs  state.rs  taxes.rs  totals.rs  view.rs
src/components/invoice/fields_card/: container_renderer.rs  field_renderer.rs  group_renderer.rs  mod.rs  view.rs
src/components/layout/: mod.rs  sidebar.rs  top_nav.rs
src/components/ui/: autocomplete.rs  badge.rs  button.rs  card.rs  input.rs  mod.rs  select.rs  switch.rs  table.rs  tabs.rs
src/routes/: invoice_builder.rs  mod.rs
src/shared/: fonts.rs  mod.rs  templates.rs  types.rs
src/shared/hooks/: mod.rs  use_responsive.rs
src/shared/typst/: mod.rs
style/: main.css
templates/: basic.typ
